--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
             </div>
             <div class="for-slider-fixed">
                 <!-- <div class="slider-border"></div> -->
+                <div class="for-slider-static">
+                    <div class="static-container">
+                        <div class="circle-div">
+                            <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 12px; width: 12px; stroke:#222222; stroke-width: 5.33333; overflow: visible;"><g fill="none"><path d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"></path></g></svg>
+                        </div>
+                        <div class="filter-div">
+                            <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 14px; width: 14px; fill: black;"><path d="M5 8c1.306 0 2.418.835 2.83 2H14v2H7.829A3.001 3.001 0 1 1 5 8zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm6-8a3 3 0 1 1-2.829 4H2V4h6.17A3.001 3.001 0 0 1 11 2zm0 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"></path></svg>
+                            <span>Filter</span>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
             <div class="slider-container" style="height:70px;">
                 <div class="slider">
                     <div class="in-slider">
